fixed text alignment

--- a/styles/sass/_globalStyling.scss
+++ b/styles/sass/_globalStyling.scss
@@ -156,6 +156,7 @@ h2 {
   @include fontSize (18);
     p {
       line-height: 30px; 
+      text-align: inherit;
     }
 }
 
